Fixed images not showing up

--- a/HomePage.css
+++ b/HomePage.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: gray;
+    background-color: black;
     box-sizing: border-box;
     overflow-x: hidden;
 }
